Fix the fixed navbar displaying below the page content on mobile display

--- a/src/components/nav/index.css
+++ b/src/components/nav/index.css
@@ -12,6 +12,7 @@
     background-color: rgb(75,75,75);
     box-shadow: 0 0 9px rgba(0,0,0,.3);
     transition: transform .3s;
+    z-index: 1;
     @media (--large-screen) {
         width: var(--small-col-width);
         top: calc(var(--gutter));
